Moved Resources to Enum

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,12 +13,14 @@ and open the template in the editor.
     <body>
         <h1>Showcase</h1>
         <h2>UMA</h2>
-        <div><a href="method1?permission=resource1">Resource 1 mit UMA-Authorisierung</a></div>
-        <div><a href="method1?permission=resource2">Resource 2 mit UMA-Authorisierung</a></div>
-        <div><a href="method1?permission=resource3">Resource 3 mit UMA-Authorisierung</a></div>
+        <div><a href="methodUMA1">Resource 1 mit UMA-Authorisierung</a></div>
+        <div><a href="methodUMA2">Resource 2 mit UMA-Authorisierung</a></div>
+        <div><a href="methodUMA3">Resource 3 mit UMA-Authorisierung</a></div>
+        <div><a href="methodUMA?permission=RESOURCE4">Resource 4 mit UMA-Authorisierung</a></div>
         <h2>Entitlements</h2>
-        <div><a href="method2?permission=resource1">Resource 1 mit Entitlements-Authorisierung</a></div>
-        <div><a href="method2?permission=resource2">Resource 2 mit Entitlements-Authorisierung</a></div>
-        <div><a href="method2?permission=resource3">Resource 3 mit Entitlements-Authorisierung</a></div>
+        <div><a href="methodEntitlements1">Resource 1 mit Entitlements-Authorisierung</a></div>
+        <div><a href="methodEntitlements2">Resource 2 mit Entitlements-Authorisierung</a></div>
+        <div><a href="methodEntitlements3">Resource 3 mit Entitlements-Authorisierung</a></div>
+        <div><a href="methodEntitlements?permission=RESOURCE4">Resource 4 mit Entitlements-Authorisierung</a></div>
     </body>
 </html>
