Added KeyCloak API

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,5 +22,10 @@ and open the template in the editor.
         <div><a href="methodEntitlements2">Resource 2 mit Entitlements-Authorisierung</a></div>
         <div><a href="methodEntitlements3">Resource 3 mit Entitlements-Authorisierung</a></div>
         <div><a href="methodEntitlements?permission=RESOURCE4">Resource 4 mit Entitlements-Authorisierung</a></div>
+        <h2>Entitlements mit KeyCloak API</h2>
+        <div><a href="methodEntitlements1KeyCloak">Resource 1 mit Entitlements-Authorisierung und KeyCloak API</a></div>
+        <div><a href="methodEntitlements2KeyCloak">Resource 2 mit Entitlements-Authorisierung und KeyCloak API</a></div>
+        <div><a href="methodEntitlements3KeyCloak">Resource 3 mit Entitlements-Authorisierung und KeyCloak API</a></div>
+        <div><a href="methodEntitlementsKeyCloak?permission=RESOURCE4">Resource 4 mit Entitlements-Authorisierung  und KeyCloak API</a></div>
     </body>
 </html>
