--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,5 +27,10 @@ and open the template in the editor.
         <div><a href="methodEntitlements2KeyCloak">Resource 2 mit Entitlements-Authorisierung und KeyCloak API</a></div>
         <div><a href="methodEntitlements3KeyCloak">Resource 3 mit Entitlements-Authorisierung und KeyCloak API</a></div>
         <div><a href="methodEntitlementsKeyCloak?permission=RESOURCE4">Resource 4 mit Entitlements-Authorisierung  und KeyCloak API</a></div>
+        <h2>Entitlements ohne Cache</h2>
+        <div><a href="methodEntitlements1NoCache">Resource 1 mit Entitlements-Authorisierung (kein Cache)</a></div>
+        <div><a href="methodEntitlements2NoCache">Resource 2 mit Entitlements-Authorisierung (kein Cache)</a></div>
+        <div><a href="methodEntitlements3NoCache">Resource 3 mit Entitlements-Authorisierung (kein Cache)</a></div>
+        <div><a href="methodEntitlementsNoCache?permission=RESOURCE4">Resource 4 mit Entitlements-Authorisierung (kein Cache)</a></div>                
     </body>
 </html>
